--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Basic Vocoder</title>
+  <title>Improved Vocoder</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body>
-  <h1>Basic Vocoder Demo</h1>
+  <h1>Improved Vocoder Demo</h1>
   <button id="start-vocoder">Start Vocoder</button>
 
   <script>
@@ -26,14 +26,14 @@
       const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
       const analyser = audioCtx.createAnalyser();
       
-      // Set FFT size (this determines how many frequency bands we analyze)
-      analyser.fftSize = 2048; // You can change this for more/less frequency resolution
+      // Set FFT size
+      analyser.fftSize = 1024; // must be a power of 2
       const bufferLength = analyser.frequencyBinCount;
       const dataArray = new Float32Array(bufferLength);
 
       // Create a GainNode to control the output volume
       const gainNode = audioCtx.createGain();
-      gainNode.gain.value = 0.5;  // Set this to control volume
+      gainNode.gain.value = 0.5;  // Set this to control overall volume
 
       // Request access to the microphone
       const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
@@ -42,47 +42,48 @@
       // Connect microphone input to the analyser
       source.connect(analyser);
       analyser.connect(gainNode);  // Connect the analyser to the gain node
-      gainNode.connect(audioCtx.destination);  // Connect the gain node to the output (speakers)
+      gainNode.connect(audioCtx.destination);  // Connect the gain node to the output
 
-      // Function to re-synthesize the sound with oscillators
+      // Create a fixed set of oscillators for each frequency bin
+      const oscillators = [];
+      const gainNodes = [];
+
+      for (let i = 0; i < bufferLength; i++) {
+        const frequency = (i * audioCtx.sampleRate) / analyser.fftSize;  // Get frequency for this band
+
+        const osc = audioCtx.createOscillator();
+        osc.frequency.setValueAtTime(frequency, audioCtx.currentTime);
+        osc.type = 'sine';  // You can experiment with 'sawtooth' or 'square' for different effects
+
+        // Create a gain node for each oscillator to control amplitude
+        const oscGain = audioCtx.createGain();
+        oscGain.gain.value = 0;  // Start with zero gain
+
+        osc.connect(oscGain);
+        oscGain.connect(audioCtx.destination);
+
+        // Start the oscillator
+        osc.start();
+
+        // Keep track of the oscillator and gain node
+        oscillators.push(osc);
+        gainNodes.push(oscGain);
+      }
+
+      // Function to update oscillator amplitudes based on the FFT data
       function processAudio() {
         analyser.getFloatFrequencyData(dataArray);  // Get frequency data (in dB)
 
-        // Clear existing oscillators
-        oscillators.forEach(osc => osc.disconnect());
-        oscillators = [];
-
-        // Create a new oscillator for each frequency band
+        // Adjust the gain of each oscillator based on the frequency data
         for (let i = 0; i < bufferLength; i++) {
-          const frequency = (i * audioCtx.sampleRate) / analyser.fftSize;  // Get frequency for this band
           const amplitude = Math.max(dataArray[i], -100);  // Clamp amplitude values
-
-          // Only create an oscillator for bands with significant amplitude
-          if (amplitude > -80) {  // Adjust this threshold for sensitivity
-            const osc = audioCtx.createOscillator();
-            osc.frequency.setValueAtTime(frequency, audioCtx.currentTime);
-
-            // Use a gain node to control the oscillator's amplitude
-            const oscGain = audioCtx.createGain();
-            oscGain.gain.value = (amplitude + 100) / 100;  // Normalize amplitude to 0-1
-
-            // Connect oscillator to gain, then to the audio context
-            osc.connect(oscGain);
-            oscGain.connect(audioCtx.destination);
-
-            // Start the oscillator
-            osc.start();
-            osc.stop(audioCtx.currentTime + 0.1);  // Short-lived, replaced in the next frame
-
-            oscillators.push(osc);
-          }
+          gainNodes[i].gain.setValueAtTime((amplitude + 100) / 1000, audioCtx.currentTime);  // Normalize amplitude
         }
 
-        // Keep processing audio
+        // Continue processing audio
         requestAnimationFrame(processAudio);
       }
 
-      let oscillators = [];
       processAudio();  // Start processing the audio
     }
 
